# memstead

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  LICENSE  LICENSE-APACHE  LICENSING.md  NOTICE  PRIOR_ART.md  README.md  SECURITY.md  VISION.md  build-engine.sh  dist-workspace.toml  install.sh  run-tests.sh
crates/memstead-base/: Cargo.toml  README.md
crates/memstead-base/src/: anchor.rs  backend.rs  binding.rs  binding_migrate.rs  chunking.rs  domain_authority_wire.rs  filesystem.rs  lib.rs  mem.rs  mem_management.rs  overview.rs  pipeline.rs  pipeline_edit.rs  pipeline_migrate.rs  pipeline_store.rs  provenance.rs  render.rs  runtime_validator.rs  schema_source.rs  storage.rs  store.rs  vault.rs  vault_management.rs  vcs.rs  workspace.rs  workspace_root.rs  workspace_store.rs
crates/memstead-base/src/engine/: apply_commit.rs  archive.rs  boot.rs  drift.rs  error.rs  events.rs  file_watcher.rs  history.rs  in_memory_mem.rs  in_memory_vault.rs  lifecycle.rs  mod.rs  outcomes.rs  query.rs  review.rs
crates/memstead-base/src/entity/: generator.rs  id.rs  loader.rs  mod.rs  parser.rs  source.rs  store_builder.rs  wikilink_rewrite.rs  writer.rs
crates/memstead-base/src/filesystem/: changelog.rs  config.rs  publish.rs  tier3.rs
crates/memstead-base/src/graph/: community.rs  mod.rs  query.rs  relations.rs  topology.rs
crates/memstead-base/src/ingest/: advance.rs  brief.rs  change_detection.rs  cursor.rs  findings.rs  guidance.rs  mod.rs  prune.rs  refinement.rs  render.rs  report.rs  resolve.rs  selection.rs  slice.rs  status.rs
crates/memstead-base/src/ops/: agent_notes.rs  branch_reset.rs  changes.rs  commit_envelope.rs  diff.rs  export.rs  health.rs  integrity.rs  mod.rs  search.rs  transport.rs
crates/memstead-base/src/search_index/: mod.rs  query.rs  schema.rs  snippets.rs  tokenizer.rs  writer.rs
crates/memstead-base/src/storage/: archive.rs  filesystem.rs  in_memory.rs
crates/memstead-base/src/validator/: archive.rs  canonical.rs  config.rs  graph.rs  ids.rs  mod.rs  strict.rs
crates/memstead-bridge/: Cargo.toml  README.md
crates/memstead-bridge/src/: builder.rs  error.rs  handlers.rs  lib.rs  wire.rs
crates/memstead-bridge/tests/: embedder.rs
crates/memstead-cli/: Cargo.toml  README.md
crates/memstead-cli/src/: cli.rs  lib.rs  main.rs  outer_gitignore.rs  output.rs  setup.rs
crates/memstead-cli/src/auth/: credentials.rs  device_flow.rs  domain_key.rs  mod.rs
crates/memstead-cli/src/commands/: admin.rs  anchors.rs  batch_update.rs  branch_reset.rs  changes.rs  context.rs  create.rs  delete.rs  domain.rs  entity.rs  export.rs  health.rs  ingest.rs  init.rs  install.rs  link.rs  list.rs  login.rs  logout.rs  mem.rs  mem_repo.rs  mod.rs  overview.rs  pipeline.rs  projection.rs  publish.rs  quickstart.rs  recover.rs  relate.rs  relations.rs  reload.rs  rename.rs  review_mark.rs  schema.rs  search.rs  stats.rs  status.rs  transport.rs  type_cmd.rs  unpublish.rs  (+4 more)
crates/memstead-cli/src/registry/: mod.rs
crates/memstead-cli/templates/: mem-repo-readme.md  vault-repo-readme.md
crates/memstead-cli/tests/: mem_commands.rs  mem_init.rs  no_internal_leaks.rs  projection_commands.rs  quickstart_and_schema_new.rs  read_commands.rs  surface_consistency.rs  vault_commands.rs  vault_init.rs  workspace_config_commands.rs  workspace_dump.rs  workspace_init_envelope.rs  write_commands.rs
crates/memstead-engine/: Cargo.toml  README.md
crates/memstead-engine/src/: error.rs  health.rs  lib.rs  mem_management.rs  overview.rs  vault_management.rs  workspace_config_edit.rs
crates/memstead-engine/tests/: lifecycle.rs
crates/memstead-git-branch/: Cargo.toml  README.md
crates/memstead-git-branch/src/: discover.rs  lib.rs  mem_cache.rs  mem_repo_config.rs  mem_repo_schemas.rs  storage_memstead.rs  test_support.rs  vault_cache.rs  vault_repo_config.rs  vault_repo_schemas.rs  workspace_store.rs
crates/memstead-git-branch/src/entity/: git_tree_source.rs  mod.rs
crates/memstead-git-branch/src/ops/: agent_notes.rs  branch_reset.rs  changes.rs  diff.rs  export.rs  mod.rs  transport.rs
crates/memstead-git-branch/src/storage/: git_tree.rs  mod.rs
crates/memstead-git-branch/src/vcs/: mod.rs
crates/memstead-git-branch/tests/: entity_history.rs  mixed_backend_create.rs  pipeline_provenance.rs
crates/memstead-mcp/: Cargo.toml  README.md
crates/memstead-mcp/src/: config.rs  error_envelope.rs  error_envelopes.rs  filesystem_server.rs  lib.rs  lifecycle.rs  main.rs  read_mems.rs  read_vaults.rs  server.rs
crates/memstead-mcp/src/tools/: admin.rs  graph.rs  mod.rs  mutation.rs
crates/memstead-mcp/tests/: boot.rs  boot_lean.rs  read_mem_install.rs  read_vault_install.rs  reload_notice.rs  tool_surface.rs  wire_shape.rs  wire_shape_lean.rs
crates/memstead-schema/: Cargo.toml  README.md
crates/memstead-schema/src/: archive_provenance.rs  base_metadata.rs  builtins.rs  config.rs  lib.rs  loader.rs  manifest.rs  meta_schema.rs  schema.rs  source.rs  types.rs  workspace_config.rs
crates/memstead-schema/tests/: config_fixtures.rs  json_schemas.rs  loader.rs
crates/memstead-serve/: .gitignore  Cargo.toml  build.rs
crates/memstead-serve/src/: graph.rs  lib.rs  main.rs  session.rs
crates/memstead-swift/: .gitignore  Cargo.toml  build.rs
crates/memstead-swift/src/: convert.rs  error.rs  lib.rs  memstead-test-support.udl  memstead.udl  types.rs
crates/memstead-wasm/: Cargo.toml  README.md  build.rs  package.json
crates/memstead-wasm/client-js/: README.md  package-lock.json  package.json  tsconfig.json
crates/memstead-wasm/src/: lib.rs
crates/memstead-wasm/tests/: web.rs
xtask/: Cargo.toml  docs-guard-allow.txt  operations.toml
xtask/eval-example/: README.md  corpus.md  facts.json  tasks.json
xtask/src/: binding_ref.rs  errors.rs  main.rs  mcp.rs  parity.rs  release.rs  udl.rs  wasm.rs
xtask/src/eval/: arm.rs  capture.rs  claude.rs  contamination.rs  coverage.rs  divergence.rs  grade.rs  judge.rs  mod.rs  replay.rs  selftest.rs  series.rs  substrate.rs  tasks.rs
(+552 files in other folders)
