[package]
name = "memstead-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Full engine extension for Memstead — multi-mem policy, mem management, cross-mem-link resolution, lifecycle. Depends on memstead-base. Internal library surface consumed by the memstead binaries — pre-1.0, experimental, no API stability promise."
readme = "README.md"
keywords = ["agent-memory", "knowledge-graph", "markdown", "graph", "agents"]
categories = ["database-implementations"]

[dependencies]
memstead-base.workspace = true
memstead-schema.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
