[package]
name = "memstead-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP server for Memstead — exposes the typed entity-graph engine over JSON-RPC stdio. Default build produces the full `memstead-mcp` binary (multi-mem, git-backed); `--no-default-features` builds the lean folder + archive surface."
readme = "README.md"
keywords = ["memstead", "mcp", "knowledge-graph", "agents", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "memstead-mcp"
path = "src/main.rs"

[dependencies]
memstead-base.workspace = true
memstead-engine = { workspace = true, optional = true }
memstead-git-branch = { workspace = true, optional = true }
memstead-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rmcp.workspace = true
semver = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
indexmap.workspace = true
clap.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
gix.workspace = true
memstead-git-branch = { workspace = true, features = ["test-support"] }
tempfile.workspace = true

[features]
# `mem-repo` is the default: it pulls in the git-branch backend
# (`memstead-git-branch` + the full `memstead-engine` extension) and
# compiles the multi-mem `McpServer` plus its support modules —
# yielding the full `memstead-mcp` binary external integrations invoke.
# `--no-default-features` drops all of that, producing the lean
# folder + archive `FilesystemMcpServer`. The lean build is a CI /
# wasm-adjacent config and dependency-hygiene guard, not a shipped product.
default = ["mem-repo"]
mem-repo = ["dep:memstead-engine", "dep:memstead-git-branch", "dep:semver"]

[lints]
workspace = true
