[package]
name = "memstead-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Schema types for Memstead — entity definitions, vocabulary, and validation rules."
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
semver.workspace = true
indexmap.workspace = true
toml.workspace = true
serde_yaml_ng = "0.10"
include_dir = "0.7"
schemars = { version = "1.0", features = ["derive", "indexmap2", "semver1"] }
strsim = "0.11"

[dev-dependencies]
tempfile.workspace = true
