[package]
name = "memstead-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Schema types for Memstead — entity definitions, vocabulary, and validation rules. Internal library surface consumed by the memstead binaries — pre-1.0, experimental, no API stability promise."
readme = "README.md"
keywords = ["agent-memory", "knowledge-graph", "schema", "markdown", "validation"]
categories = ["data-structures"]

# `src/bin/emit_json_schemas.rs` is a repo-internal dev tool (regenerates the
# IDE-validation JSON Schemas the drift test pins; it writes into repo paths).
# Cargo auto-detects `src/bin/*.rs`, so without this opt-out cargo-dist shipped
# it as a third "memstead-schema" app — own installer + Homebrew formula — in
# the v0.2.0/v0.3.0 releases. Never a user-facing binary; keep dist off.
[package.metadata.dist]
dist = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
semver.workspace = true
indexmap.workspace = true
toml.workspace = true
serde_yaml_ng = "0.10"
include_dir = "0.7"
schemars = { version = "1.0", features = ["derive", "indexmap2", "semver1"] }
strsim = "0.11"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
