[package]
name = "memstead-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Generic read-only HTTP/MCP server over a sealed Memstead vault — plain-HTTP read API, native MCP endpoint, self-describing runbook, discovery manifest, and an optional embedded static site. Deployment-agnostic: the vault, authority identity, and site are inputs."
publish = false

[[bin]]
name = "memstead-serve"
path = "src/main.rs"

[dependencies]
memstead-base = { workspace = true, features = ["tokio"] }
memstead-engine.workspace = true
memstead-mcp.workspace = true
memstead-schema.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "net", "time"] }
# Unguessable session ids for the writable session-server binary (the only
# thing scoping a throwaway in-memory vault). Already transitive via rmcp.
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "query"] }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
tower_governor = "0.8"
# Already in the build graph via axum; promoted to a direct dep so the
# per-session `/s/{id}/mcp` handler can dispatch to the rmcp streamable-HTTP
# tower `Service` (`ServiceExt::oneshot`).
tower = { version = "0.4", default-features = false, features = ["util"] }
# Already in the build graph (tokio ecosystem, transitive via rmcp/axum);
# promoted to a direct dep for `BroadcastStream` — the per-session live
# graph SSE stream over the vault-change broadcast channel.
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
tempfile.workspace = true
semver.workspace = true
http-body-util = "0.1"
bytes = "1"
# Test-only: constructing engine mutation args (CreateEntityArgs.sections)
# for the graph-projection unit tests.
indexmap = { workspace = true }
