[package]
name = "memstead-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings exposing the Memstead engine to browser thin clients via wasm-bindgen."
publish = false

[lib]
# `cdylib` builds the .wasm artifact that wasm-pack consumes;
# `rlib` keeps the crate usable as a Rust dependency for any future
# native consumer (today only host-side test scaffolding may benefit).
crate-type = ["cdylib", "rlib"]

[dependencies]
# Explicit path dep (not `workspace = true`) so we can disable
# default features — the workspace declaration of `memstead-base` does
# not opt into `default-features = false` overrides, and the WASM
# build requires the lean tantivy-free feature set.
memstead-base = { path = "../memstead-base", default-features = false }
memstead-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
thiserror.workspace = true
# `console_error_panic_hook` upgrades a wasm panic from an opaque
# `RuntimeError: unreachable executed` to a readable JS stack trace.
# Only pulled in by the explicit `set_panic_hook()` entry point so it
# stays out of the default cold path for bundle-size sensitive builds.
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["panic-hook"]
# Wires `console_error_panic_hook` so panics surface as readable JS
# stack traces. Worth the ~3 KB it adds for any consumer that values
# debuggability over the bare minimum bundle.
panic-hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
# Build-time only: the `build.rs` script generates `fixture.mem` for
# the wasm-bindgen smoke tests via `Engine::export_vault_to_bytes`.
# Runs on the host (native), so `default-features` doesn't matter here.
memstead-base = { path = "../memstead-base" }
memstead-schema.workspace = true
indexmap.workspace = true
semver.workspace = true
tempfile.workspace = true

# Optimise the wasm artifact for size. Tantivy-free engine + LTO
# brings the .wasm under the bundle-size budget documented in plan 07.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
